--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+db.sqlite3
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
